// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button should render 1`] = `
.c0 {
  padding: 1rem;
  background-color: #E72934;
  border: 0;
  color: #FFF;
  border-radius: 0.5rem;
  opacity: 1;
}

<button
  className="c0"
  loading="false"
/>
`;

exports[`Component: Button should render Button 1`] = `
.c0 {
  padding: 1rem;
  background-color: #E72934;
  border: 0;
  color: #FFF;
  border-radius: 0.5rem;
  opacity: 1;
}

<button
  className="c0"
  loading="false"
/>
`;

exports[`Component: Button should render Button loading 1`] = `
.c0 {
  padding: 1rem;
  background-color: #E72934;
  border: 0;
  color: #FFF;
  border-radius: 0.5rem;
  opacity: 0.8;
}

.c1 {
  -webkit-animation: rotation 0.5s infinite linear;
  animation: rotation 0.5s infinite linear;
}

<button
  className="c0"
  disabled={true}
  loading="true"
>
  <svg
    className="c1"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
    />
  </svg>
</button>
`;

exports[`Component: Button should render LoadingSpinner 1`] = `
.c0 {
  -webkit-animation: rotation 0.5s infinite linear;
  animation: rotation 0.5s infinite linear;
}

<svg
  className="c0"
  fill="currentColor"
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  style={
    Object {
      "color": undefined,
    }
  }
  viewBox="0 0 1024 1024"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
  />
</svg>
`;
